@@ -8,6 +8,7 @@ Bugfixes:
  - GBA: Deinit savegame when unloading a ROM
 Misc:
  - Qt: Remove useless help icons in dialogs
+ - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
 
 0.3.0: (2015-08-16)
 Features:
